--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
             </div>
             
             <h1 class="text-3xl sm:text-4xl font-bold mb-2">Helen Maddox</h1>
-            <!-- Job titles remain in teal here for contrast against dark blue background -->
-            <p class="text-xl sm:text-2xl font-medium text-custom-teal mb-6">
+            <!-- Job titles font size reduced here -->
+            <p class="text-lg sm:text-xl font-medium text-custom-teal mb-6">
                 SENIOR ON-SITE SERVICE SPECIALIST<br>
                 PRINT PRODUCTION | MACHINE OPERATOR<br>
                 GRAPHIC DESIGNER
@@ -69,8 +69,9 @@
                     502.658.0086
                 </p>
                 <p class="flex items-center justify-center">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2 text-custom-teal" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8m-2 4v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4m0-4l9 6 9-6" />
+                    <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-2 text-custom-teal" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
+                        <rect x="3" y="5" width="18" height="14" rx="2" ry="2"></rect>
+                        <path d="M3 7L12 13L21 7"></path>
                     </svg>
                     helenmaddox1981@gmail.com
                 </p>
